# omnivore

./: .gitignore  CLAUDE.md  FEATURES.md  FUTURE-DEPENDENCY-GRAPHS.md  FUTURE-GITHUB-APP-AUTH.md  FUTURE-IDEAS.md  README.md  ROADMAP.md
.github/: dependabot.yml
.github/actions/upload-coverage/: action.yml
.github/workflows/: coverage.yml  publish.yml
android-test-rig/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
android-test-rig/app/: build.gradle.kts
coverage-plugin/: CLAUDE.md  PUBLISHING-REQUIRED.md  README.md  build.gradle.kts  settings.gradle.kts
coverage-plugin/gradle/: libs.versions.toml
coverage-plugin/omnivore-agent/: build.gradle.kts
coverage-plugin/omnivore-agent-tests/: build.gradle.kts
coverage-plugin/omnivore-gradle-plugin/: build.gradle.kts
dashboard/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
dashboard/crates/omnivore-core/: Cargo.toml
dashboard/crates/omnivore-core/src/: lib.rs  report.rs
dashboard/crates/omnivore-core/src/github/: comment.rs  mod.rs  pr_client.rs  source.rs
dashboard/crates/omnivore-core/src/model/: api_key.rs  coverage.rs  mod.rs  project.rs  session.rs  settings.rs
dashboard/crates/omnivore-core/src/parsers/: go_coverprofile.rs  jacoco_xml.rs  lcov.rs  llvm_cov.rs  mod.rs  omnivore_json.rs  python_coverage.rs
dashboard/crates/omnivore-core/src/storage/: db.rs  mod.rs
dashboard/crates/omnivore-server/: Cargo.toml
dashboard/crates/omnivore-server/src/: lib.rs  main.rs
dashboard/crates/omnivore-server/src/routes/: auth.rs  badge.rs  coverage.rs  embed.rs  export.rs  health.rs  mod.rs  pages.rs  projects.rs  settings.rs
dashboard/crates/omnivore-server/src/routes/pages/: dependencies.rs  file_coverage.rs  health_page.rs  mod.rs  project_detail.rs  projects.rs
dashboard/crates/omnivore-server/static/: style.css
dashboard/crates/omnivore-server/templates/: api_key_created.html  base.html  dependency_graph.html  export.html  file_coverage.html  health.html  project_detail.html  project_settings.html  projects.html  settings.html
dashboard/crates/omnivore-server/tests/: api_tests.rs
docs/: docker-deployment.md  features.md  future-ideas.md  github-actions.md  github-oauth-design.md  lcov-integration.md  llvm-cov-integration.md  roadmap.md
kmp-test-rig/: CLAUDE.md  settings.gradle.kts
kmp-test-rig/core/src/test/kotlin/com/example/core/: ResultTest.kt
schema/: CLAUDE.md
test-rig/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
test-rig/app/src/main/kotlin/com/example/app/: StringUtils.kt  UserService.kt
test-rig/src/main/kotlin/com/example/app/: Calculator.kt  UserService.kt
test-rig/src/test/kotlin/com/example/app/: CalculatorTest.kt  UserServiceTest.kt
test-rigs/android-test-rig/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
test-rigs/android-test-rig/app/: build.gradle.kts
test-rigs/android-test-rig/app/src/main/: AndroidManifest.xml
test-rigs/android-test-rig/app/src/main/res/values/: strings.xml
test-rigs/android-test-rig/common/: build.gradle.kts
test-rigs/android-test-rig/data/: build.gradle.kts
test-rigs/android-test-rig/domain/: build.gradle.kts
test-rigs/go-test-rig/: CLAUDE.md  coverage.out  go.mod
test-rigs/go-test-rig/coverage/: coverage.lcov  coverage.out
test-rigs/go-test-rig/formatter/: formatter.go  formatter_test.go
test-rigs/go-test-rig/model/: task.go  task_test.go
test-rigs/go-test-rig/repository/: repository.go  repository_test.go
test-rigs/go-test-rig/usecase/: usecase.go  usecase_test.go
test-rigs/go-test-rig/validation/: validate.go  validate_test.go
test-rigs/kmp-test-rig/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
test-rigs/python-test-rig/: .coverage  CLAUDE.md  coverage.json  pyproject.toml
test-rigs/python-test-rig/taskmanager/: formatter.py  model.py  repository.py  usecase.py  validation.py
test-rigs/python-test-rig/tests/: test_formatter.py  test_model.py  test_repository.py  test_usecase.py  test_validation.py
test-rigs/rust-test-rig/: CLAUDE.md  Cargo.toml  coverage.json
test-rigs/rust-test-rig/app/: Cargo.toml
test-rigs/rust-test-rig/app/src/: formatter.rs  lib.rs
test-rigs/rust-test-rig/core/: Cargo.toml
test-rigs/rust-test-rig/core/src/: lib.rs  model.rs  repository.rs  usecase.rs  validation.rs
(+84 files in other folders)
