[project]
name = "python-test-rig"
version = "0.1.0"
description = "Python test project for Omnivore dashboard coverage ingestion"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "coverage>=7.0"]

[tool.coverage.run]
source = ["taskmanager"]

[tool.coverage.json]
output = "coverage.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
