[package]
name = "omnivore-server"
version.workspace = true
edition.workspace = true

[lib]
name = "omnivore_server"
path = "src/lib.rs"

[[bin]]
name = "omnivore-dashboard"
path = "src/main.rs"

[dependencies]
omnivore-core = { path = "../omnivore-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true }
reqwest = { workspace = true }
axum-extra = { version = "0.12", features = ["cookie"] }
dotenvy = "0.15"

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
hyper = "1"
http-body-util = "0.1"
